--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
                 <li><a href="pricing">Pricing</a></li> 
                 <li><a href="contact">Contact</a></li> 
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
-        <i class="fa-solid fa-bars"></i>
+       
 
     </header>
     <section aria-label="seção curriculo download Eric" class="section-div">
 <div>
     <h2>Hi There! I'm</h2>
     <h2 class="digitando"> Web Developer</h2>
-    <p> colocar apresentação sobre mim</p>
+    <p>Hello, my name is Eric Mota, I have a degree in Industrial Automation and a certificate in Web Developer. Front-End Developer - JavaScript, TypeScript, HTML, CSS, Sass, Tailwind CSS, Webpack | Node.js | Next.js | Nest.js | TDD with Jasmine </p>
     <a href="#">Download CV</a>
 </div>
 <img src="imagemEric.jpg" alt="Imagem feita com IA">
@@ -51,10 +52,10 @@
     <img src="imagemEric.jpg" alt="imagem feito com IA">
     <div class="sobre_conteudo">
         <div class="sobre_texto">
-            <h1> I'm Dev Saber</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <h1> I'm Web Dev </h1>
+            <p>With my passion for technology and strong skills in web development, I am ready to take your company to a new digital level. My experience and dedication in creating innovative and visually appealing solutions are the key to enhancing your company's online presence and providing an exceptional user experience.  
                 <br>
-            Sunt et nostrum sapiente autem obcaecati omnis ipsum ut eum tempora nisi.</p>
+                I look forward to contributing my expertise and collaborating in the success of your development team.</p>
         </div>
     </div>
     <div class="sobre_info">
@@ -63,7 +64,7 @@
 <p><i class="fa-solid fa-map-location-dot"></i>Adress: Bahia, Brazil</p>
 <p><i class="fa-sharp fa-solid fa-globe"></i>Spoken Langages: Brazil,</p>
 <p><i class="fa-solid fa-flag"></i>Nationality: Brazil</p>
-<p><i class="fa-solid fa-phone-volume"></i>Phone: +55 71 992409932 or 71 993047732</p>
+<p><i class="fa-solid fa-phone-volume"></i>Phone: +55 71 992409932(Whatsapp) or 71 993047732</p>
 <p><i class="fa-solid fa-envelope"></i>Email: Ericmota010@gmail.com</p>
 </div>
 </div>
@@ -80,6 +81,7 @@
             <span></span>
         </div>
         </div>
+
         <div class="my_services">
             <ul aria-label="Navegação Navegacao-primaria">
                 <li>
