--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
     <section aria-label="seção curriculo download Eric" class="section-div">
 <div>
-    <h2>Hi There! I'm</h2>
+    <h2>Bem Vindo! </h2>
     <h2 class="digitando"> Web Developer</h2>
-    <p>Hello, my name is Eric Mota, I have a degree in Industrial Automation and a certificate in Web Developer. Front-End Developer - JavaScript, TypeScript, HTML, CSS, Sass, Tailwind CSS, Webpack | Node.js | Next.js | Nest.js | TDD with Jasmine </p>
+    <p>> Olá meu nome é Eric Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore saepe perferendis, perspiciatis voluptatibus beatae repellat blanditiis corporis reprehenderit. Voluptatibus, consequuntur possimus recusandae voluptas incidunt natus aliquid sunt amet iure hic!</p>
     <a href="#">Download CV</a>
 </div>
 <img src="imagemEric.jpg" alt="Imagem feita com IA">
@@ -74,7 +74,7 @@
     <div class="sobre_titulo">
 
         <h1>About Me</h1>
-        <p>Professional Profile - There is All About Me</p>
+        <p>Professional Profile - Algumas skills sobre mim</p>
         <div aria-label="seção apenas de ilustração">
             <span></span>
             <span></span>
@@ -86,7 +86,7 @@
             <ul aria-label="Navegação Navegacao-primaria">
                 <li>
                     <i class="fa-solid fa-globe"></i>
-                    <h3>Web Developer</h3>
+                    <h3>Ao meu protfolio</h3>
                     <p>Criação e manutenção de sites e aplicativos. Linguagens HTML, CSS e JavaScript, juntamente com frameworks e ferramentas, para construir interfaces interativas e responsivas. Trabalhar em equipe para implementar recursos e resolver problemas.</p>
                 </li>
                 <li>
