--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Dev <span>Saber</span></h1>
+        <h1>Port<span>folio</span></h1>
         <nav>
             <ul aria-label="Navegacão-primaria" class="navegacao-primaria">
                 <li><a href="#home">Home</a></li>
@@ -29,9 +29,9 @@
     </header>
     <section aria-label="seção curriculo download Eric" class="section-div">
 <div>
-    <h2>Bem Vindo! </h2>
-    <h2 class="digitando"> Web Developer</h2>
-    <p>> Olá meu nome é Eric Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore saepe perferendis, perspiciatis voluptatibus beatae repellat blanditiis corporis reprehenderit. Voluptatibus, consequuntur possimus recusandae voluptas incidunt natus aliquid sunt amet iure hic!</p>
+    <h2>Eric Mota </h2>
+    <h2 class="digitando"> Unime Anhanguera</h2>
+    <p> Olá meu nome é Eric Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore saepe perferendis, perspiciatis voluptatibus beatae repellat blanditiis corporis reprehenderit. Voluptatibus, consequuntur possimus recusandae voluptas incidunt natus aliquid sunt amet iure hic!</p>
     <a href="#">Download CV</a>
 </div>
 <img src="imagemEric.jpg" alt="Imagem feita com IA">
@@ -42,7 +42,7 @@
         <div class="sobre_titulo">
 
         <h1>About Me</h1>
-        <p>Professional Profile - There is All About Me</p>
+        <p>Professional Profile </p>
         <div aria-label="seção apenas de ilustração">
             <span></span>
             <span></span>
@@ -52,10 +52,10 @@
     <img src="imagemEric.jpg" alt="imagem feito com IA">
     <div class="sobre_conteudo">
         <div class="sobre_texto">
-            <h1> I'm Web Dev </h1>
-            <p>With my passion for technology and strong skills in web development, I am ready to take your company to a new digital level. My experience and dedication in creating innovative and visually appealing solutions are the key to enhancing your company's online presence and providing an exceptional user experience.  
+            <h1> </h1>
+            <p>Com minha paixão por tecnologia e fortes habilidades em desenvolvimento, estou pronto para levar sua empresa a um novo patamar digital. A minha experiência e dedicação na criação de soluções inovadoras e visualmente apelativas são a chave para potenciar a presença online da sua empresa e proporcionar uma experiência excepcional ao utilizador..  
                 <br>
-                I look forward to contributing my expertise and collaborating in the success of your development team.</p>
+                Estou ansioso para contribuir com minha experiência e colaborar no sucesso de sua equipe de desenvolvimento.</p>
         </div>
     </div>
     <div class="sobre_info">
@@ -74,7 +74,7 @@
     <div class="sobre_titulo">
 
         <h1>About Me</h1>
-        <p>Professional Profile - Algumas skills sobre mim</p>
+        <p>Professional Profile - Skills </p>
         <div aria-label="seção apenas de ilustração">
             <span></span>
             <span></span>
@@ -86,7 +86,7 @@
             <ul aria-label="Navegação Navegacao-primaria">
                 <li>
                     <i class="fa-solid fa-globe"></i>
-                    <h3>Ao meu protfolio</h3>
+                    <h3>Objetivo</h3>
                     <p>Criação e manutenção de sites e aplicativos. Linguagens HTML, CSS e JavaScript, juntamente com frameworks e ferramentas, para construir interfaces interativas e responsivas. Trabalhar em equipe para implementar recursos e resolver problemas.</p>
                 </li>
                 <li>
